--- a/src/interfaces/JanelaCadastroFornecedor.form
+++ b/src/interfaces/JanelaCadastroFornecedor.form
@@ -52,7 +52,6 @@
                 </LineBorder>
               </Border>
               <Font PropertyName="font" name="Arial" size="14" style="2"/>
-              <Color PropertyName="color" blue="0" green="0" red="0" type="rgb"/>
             </TitledBorder>
           </Border>
         </Property>
@@ -381,7 +380,6 @@
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                 <TitledBorder title="Endere&#xe7;o">
                   <Font PropertyName="font" name="Arial" size="10" style="0"/>
-                  <Color PropertyName="color" blue="0" green="0" red="0" type="rgb"/>
                 </TitledBorder>
               </Border>
             </Property>
@@ -477,11 +475,13 @@
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="cidadeTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="telefoneFormattedTextField" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="telefoneLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="cidadeLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="cidadeTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="telefoneLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="cidadeLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
               </Group>
