--- a/src/interfaces/JanelaCadastroProduto.form
+++ b/src/interfaces/JanelaCadastroProduto.form
@@ -49,7 +49,6 @@
                 </LineBorder>
               </Border>
               <Font PropertyName="font" name="Arial" size="12" style="2"/>
-              <Color PropertyName="color" blue="0" green="0" id="black" palette="1" red="0" type="palette"/>
             </TitledBorder>
           </Border>
         </Property>
@@ -164,6 +163,9 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="cod_produtoLabel">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="C&#xf3;digo"/>
           </Properties>
         </Component>
@@ -178,6 +180,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="nome_produtoLabel">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Nome"/>
           </Properties>
         </Component>
@@ -191,6 +196,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="custo_produtoLabel">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Custo R$"/>
           </Properties>
         </Component>
@@ -204,6 +212,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="pre&#xe7;o_vendaLabel">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Venda R$"/>
           </Properties>
         </Component>
@@ -217,6 +228,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="un_produtoLabel">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Unidade"/>
           </Properties>
         </Component>
@@ -233,6 +247,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="estoqueLabel">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Estoque"/>
           </Properties>
         </Component>
@@ -246,6 +263,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="marcaLabel">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Arial" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Marca"/>
           </Properties>
         </Component>
