--- a/src/interfaces/JanelaLogin.form
+++ b/src/interfaces/JanelaLogin.form
@@ -39,7 +39,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                  <Component id="PanelLogin" alignment="0" pref="330" max="32767" attributes="0"/>
+                  <Component id="PanelLogin" alignment="0" max="32767" attributes="0"/>
                   <Component id="PanelLogo" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -73,7 +73,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="324" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -99,9 +99,9 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="LabelImgCadeado" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
+                  <Component id="LabelImgCadeado" pref="92" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="LabelLogin" min="-2" max="-2" attributes="0"/>
                       <Component id="LabelSenha" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -195,7 +195,7 @@
         <Component class="javax.swing.JLabel" name="LabelImgCadeado">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/interfaces/img/Actions-document-encrypt-icon.png"/>
+              <Image iconType="2" name="C:\Users\MARCOANTONIO\Documents\NetBeansProjects\Tandera-Retaguarda\img\Actions-document-encrypt-icon.png"/>
             </Property>
           </Properties>
           <Events>
